tests/frontend/fail/array/create_arg_array_atomic_mismatch.act
contract B

contract A

constructor
interface constructor(uint[2] y)


constructor
interface constructor()

creates
  A a := create A(3)
